--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "single-page-test-app",
-  "version": "0.1.0",
+  "name": "spaceflightnews-app",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
